# Antenna

./: .gitattributes  .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: validate.yml
cst/: circular-patch.bas  f-shaped-patch.bas  hexagonal-patch.bas  patch-antenna.bas  square-patch.bas  triangular-patch.bas
tools/antenna/: __init__.py  __main__.py  check.py  design.py  fom.py  metrics.py  plots.py  results.py  tables.py  touchstone.py
tools/antenna/data/: results.json
tools/data/: results.json
tools/tests/: test_consistency.py  test_design.py  test_metrics.py  test_tables.py  test_touchstone.py
