[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "antenna-tools"
version = "0.1.0"
description = "Analysis toolkit for the 2.45 GHz microstrip patch antenna study"
readme = "README.md"
authors = [{name = "Urme Bose"}]
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = []

[project.urls]
Repository = "https://github.com/urme-b/Antenna"

[project.optional-dependencies]
plots = ["matplotlib>=3.5"]
dev = ["pytest>=7"]

[project.scripts]
antenna = "antenna.__main__:main"

[tool.setuptools.packages.find]
where = ["tools"]
include = ["antenna*"]

[tool.setuptools.package-data]
antenna = ["data/*.json"]

[tool.pytest.ini_options]
pythonpath = ["tools"]
testpaths = ["tools/tests"]
